006 JUN 2023 - 20:26 - Version 2, I suppose?
- The stopwatch works now.
006 JUN 2023 - 20:46 - Version 3
- Laps now display how long the lap was instead of the time at which they ended, as you might expect from a stopwatch.
06 JUN 2023 - 23:22 - Version 4
- Reformatted changelog to be even more pretentious
- Stopwatch is now sexy. Please do not lewd the stopwatch.
- Safari appears to not get along with the current iteration. Investigating.