@@ -6,3 +6,5 @@
 - Reformatted changelog to be even more pretentious
 - Stopwatch is now sexy. Please do not lewd the stopwatch.
 - Safari appears to not get along with the current iteration. Investigating.
+07 JUN 2023 - 00:06 - Version 4a
+- Made a change that will hopefully resolve the safari display issues. I am tired and don't have safari on the machine I'm working on so I'm going to bed and I'll find out if the problem has been resolved tomorrow.
